# saft

./: Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: test.yml
crates/saft/: Cargo.toml
crates/saft-ast/: Cargo.toml
crates/saft-ast-to-ir/: Cargo.toml
crates/saft-ast-to-ir/src/: lib.rs
crates/saft-ast/src/: lib.rs
crates/saft-bytecode/: Cargo.toml
crates/saft-bytecode/src/: chunk.rs  compiled_item.rs  compiler.rs  constant.rs  item.rs  lib.rs  natives.rs  num.rs  op.rs  value.rs  vm.rs
crates/saft-common/: Cargo.toml
crates/saft-common/src/: span.rs
crates/saft-eval/: Cargo.toml
crates/saft-eval/src/: interpreter.rs  lib.rs  natives.rs  value.rs
crates/saft-ir/: Cargo.toml
crates/saft-ir/src/: ir.rs  lib.rs  lowerer.rs
crates/saft-lexer/: Cargo.toml
crates/saft-lexer/src/: cursor.rs  lex.rs  lib.rs  token.rs
crates/saft-macro/: Cargo.toml
crates/saft-macro/src/: discover_tests.rs  lib.rs  native_function.rs
crates/saft-parser/: Cargo.toml
crates/saft-parser/src/: lib.rs
crates/saft-syntax/: Cargo.toml
crates/saft-syntax/src/: ast.rs  cursor.rs  lex.rs  lib.rs  parser.rs
crates/saft-tests/: Cargo.toml
crates/saft-tests/res/tests/: fib.saf  fib_loop.saf  loop_.saf  print.saf  test.saf
crates/saft-tests/res/tests/fib/: fib.saf  fib.saf.out
crates/saft-tests/res/tests/fib_loop/: fib_loop.saf
crates/saft-tests/res/tests/loop/: loop.saf
crates/saft-tests/res/tests/print/: print.saf  print.saf.out
crates/saft-tests/src/: lib.rs
crates/saft-wasm/: Cargo.toml
crates/saft-wasm/src/: lib.rs
crates/saft/src/: lib.rs  main.rs
tests/: Cargo.toml  build.rs
tests/res/tests/: fib_loop.saf
tests/src/: lib.rs
