[workspace]
resolver = "2"
members = [
    "crates/saft",
    "crates/saft-ast",
    "crates/saft-ast-to-ir",
    "crates/saft-bytecode",
    "crates/saft-common",
    "crates/saft-ir",
    "crates/saft-lexer",
    "crates/saft-macro",
    "crates/saft-parser",
    "crates/saft-tests", "crates/saft-wasm",
]
default-members = ["crates/saft"]
