[package]
name = "saft-tests"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = { version = "2.0.12", features = [ "color-auto" ] }
pretty_assertions = "1.4.0"
saft-macro = { version = "0.1.0", path = "../saft-macro" }
