[package]
name = "saft-bytecode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1"
saft-ir = { version = "0.1.0", path = "../saft-ir" }
saft-macro = { version = "0.1.0", path = "../saft-macro" }
saft-syntax = { version = "0.1.0", path = "../saft-syntax" }
