[package]
name = "saft-eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1"
quote = "1.0.35"
saft-ast = { version = "0.1.0", path = "../saft-ast" }
saft-common = { version = "0.1.0", path = "../saft-common" }
saft-macro = { version = "0.1.0", path = "../saft-macro" }
