[package]
name = "saft-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20.3"
glob = "0.3.1"
proc-macro2 = "1.0.75"
quote = "1.0.35"
syn = { version = "2.0.46", features = ["full"] }
