[package]
name = "saft"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
codespan-reporting = "0.11.1"
platform-dirs = "0.3.0"
rustyline = "13.0.0"
saft-common = { version = "0.1.0", path = "../saft-common" }
saft-lexer = { version = "0.1.0", path = "../saft-lexer" }
