[package]
name = "saft"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
codespan-reporting = { workspace = true }
indoc = "2.0.4"
platform-dirs = "0.3.0"
rustyline = "13.0.0"
saft-bytecode = { path = "../saft-bytecode" }
saft-ir = { path = "../saft-ir" }
saft-syntax = { path = "../saft-syntax" }
